--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on MySQL, and Power BI.</p>
+            <p>Below are the sample Data Analytics projects on MySQL, and Power BI and Web Development Project during LaunchCode Bootcamp</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -472,6 +472,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/Srijana061/Emergency-Room-Visit-Patient-Report-MYSQL-queries" class="block-20 zoom-effect" style="background-image: url('images/project2.png');">
@@ -509,6 +510,25 @@
 				</div>
 			  </div>
 			</div>
+			<br>
+			<br>
+			<br>
+			<br>
+
+
+
+			
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
+					<a href="https://github.com/Srijana061/tech-detectives/tree/main" class="block-20 zoom-effect" style="background-image: url('images/project5.png');">
+					</a>
+					<div class="text mt-3 float-right d-block">
+	  
+					  <h3 class="heading"><a href="https://github.com/Srijana061/tech-detectives/tree/main">HobbyFinder Web Development Project</a></h3>
+					  <p>Worked on Group project HobbyFinder which allows user to find their next hobby of interest and connect to people with similar hobbies.</p>
+					</div>
+				  </div>
+				</div>
 			
   
 				  
