--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Junior Data Analyst</h2>
+			            <h2>A Junior Data Analyst, and Junior Web Developer</h2>
 						
 						<!-- <br> -->
 			            <p>
